--- a/AndroidStudioProjects/AndroidLesson1/app/src/main/res/values/strings.xml
+++ b/AndroidStudioProjects/AndroidLesson1/app/src/main/res/values/strings.xml
@@ -7,4 +7,5 @@
     <string name="title_activity_maps">Map</string>
     <string name="title_activity_main2">Main2Activity</string>
     <string name="title_activity_press_and_play">PressAndPlay</string>
+    <string name="title_activity_edge_detection">EdgeDetectionActivity</string>
 </resources>
